--- a/.src/database/5-nosql.org
+++ b/.src/database/5-nosql.org
@@ -302,5 +302,38 @@ https://github.com/mongodb/mongo-csharp-driver
 https://www.mongodb.com/docs/drivers/csharp/current/quick-start/
 
 * Redis
+** 安装
 
-https://github.com/tporadowski/redis
+- https://redis.io/download/
+- https://github.com/tporadowski/redis (window native)
+
+** 服务端
+
+要么通过服务，要么通过命令行:
+#+begin_src sh
+  ./redis-server (run the server with default conf)
+  ./redis-server /etc/redis/6379.conf
+  ./redis-server --port 7777
+  ./redis-server --port 7777 --replicaof 127.0.0.1 8888
+  ./redis-server /etc/myredis.conf --loglevel verbose
+#+end_src
+
+** 客户端 (redis-cli)
+
+http://redisdoc.com/
+
+基于 Key-Value 键值对的操作。
+
+** 客户端 (.NET)
+
+安装驱动:
+: dotnet add package StackExchange.Redis
+
+代码示例：
+#+begin_src csharp
+  ConnectionMultiplexer client = ConnectionMultiplexer.Connect("localhost");
+  var db = client.GetDatabase();
+  var v = db.StringGet("xxx");
+  db.StringSet("hello", "world");
+  Console.WriteLine(v);
+#+end_src
