best_try_and_best_chance

--- a/.src/database/5-nosql.org
+++ b/.src/database/5-nosql.org
@@ -337,3 +337,8 @@ http://redisdoc.com/
   db.StringSet("hello", "world");
   Console.WriteLine(v);
 #+end_src
+
+* Misc
+** Redis 作为缓存的基本架构
+
+[[file:img/redis-as-cache.png]]
