--- a/.src/frontend/3-openapi.org
+++ b/.src/frontend/3-openapi.org
@@ -2078,10 +2078,25 @@ Swagger 是一系列围绕 OpenAPI specs 的工具。主要有:
   }
 
   // 可以传入更多参数
-  app.UseSwaggerUI(options =>
+  builder.Services.AddSwaggerGen(options =>
   {
-      options.SwaggerEndpoint("/swagger/v1/swagger.json", "v1");
-      options.RoutePrefix = string.Empty;
+      options.SwaggerDoc("v1", new OpenApiInfo
+      {
+          Version = "v1",
+          Title = "ToDo API",
+          Description = "An ASP.NET Core Web API for managing ToDo items",
+          TermsOfService = new Uri("https://example.com/terms"),
+          Contact = new OpenApiContact
+          {
+              Name = "Example Contact",
+              Url = new Uri("https://example.com/contact")
+          },
+          License = new OpenApiLicense
+          {
+              Name = "Example License",
+              Url = new Uri("https://example.com/license")
+          }
+      });
   });
   app.UseSwaggerUI(options =>
   {
@@ -2104,33 +2119,32 @@ Swagger 是一系列围绕 OpenAPI specs 的工具。主要有:
      var xmlFilename = $"{Assembly.GetExecutingAssembly().GetName().Name}.xml";
      options.IncludeXmlComments(Path.Combine(AppContext.BaseDirectory, xmlFilename));
    #+end_src
-3. 之后，就可以在方法上使用相关注释了:
-   #+begin_src csharp
-     /// <summary>
-     /// Creates a TodoItem.
-     /// </summary>
-     /// <param name="item"></param>
-     /// <returns>A newly created TodoItem</returns>
-     /// <remarks>
-     /// Sample request:
-     ///
-     ///     POST /Todo
-     ///     {
-     ///        "id": 1,
-     ///        "name": "Item #1",
-     ///        "isComplete": true
-     ///     }
-     ///
-     /// </remarks>
-     /// <response code="201">Returns the newly created item</response>
-     /// <response code="400">If the item is null</response>
-     [HttpPost]
-     [ProducesResponseType(StatusCodes.Status201Created)]
-     [ProducesResponseType(StatusCodes.Status400BadRequest)]
-     public async Task<IActionResult> Create(TodoItem item) {}
-   #+end_src
- 
 
+之后，就可以在方法上使用相关注释了:
+#+begin_src csharp
+  /// <summary>
+  /// Creates a TodoItem.
+  /// </summary>
+  /// <param name="item"></param>
+  /// <returns>A newly created TodoItem</returns>
+  /// <remarks>
+  /// Sample request:
+  ///
+  ///     POST /Todo
+  ///     {
+  ///        "id": 1,
+  ///        "name": "Item #1",
+  ///        "isComplete": true
+  ///     }
+  ///
+  /// </remarks>
+  /// <response code="201">Returns the newly created item</response>
+  /// <response code="400">If the item is null</response>
+  [HttpPost]
+  [ProducesResponseType(StatusCodes.Status201Created)]
+  [ProducesResponseType(StatusCodes.Status400BadRequest)]
+  public async Task<IActionResult> Create(TodoItem item) {}
+#+end_src 
 
 * xml / json / yaml
 
